Compucom CCQA Org 100919/src/objects/FCST_Forecast_Submission__c.object
<CustomObject>
    <fields>
        <fullName>FCST_PM_Name__c</fullName>
        <label>FCST PM Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_PM_Role__c</fullName>
        <label>FCST PM Role</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Planning_Version__c</fullName>
        <label>FCST Planning Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCST Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCST_Submission_Date__c</fullName>
        <label>FCST Submission Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FCST Forecast Submission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FCST Forecast Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Forecast Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>